@@ -51,8 +51,7 @@ public class FormFilterForms extends FormFilter
             try
             {
                 String strIdForm = (String) listValues.get( 0 );
-                Integer nIdForm = new Integer( strIdForm );
-                return nIdForm;
+                return Integer.valueOf( strIdForm );
             }
             catch( NumberFormatException e )
             {
